--- a/css/styles.css
+++ b/css/styles.css
@@ -8,11 +8,20 @@
   background-color: #265C77;
   color: #fff;
   margin-bottom: 20px;
-  padding: 10px 0 20px 0;
+  height: 120px;
+  padding: 20px 0 20px 0;
   text-align: center;
 }
+
+.bookmark-icon{
+  float: left;
+  padding: 5px 0 0 8px;
+}
+.header-text{
+  float: right;
+}
 .sidebar{
-  width:20%;
+  width:250px;
   position: fixed;
   height: 800px;
 
